@@ -6,6 +6,9 @@ Release 0.20.205.0 - unreleased
 
     HDFS-1377. Quota bug for partial blocks allows quotas to be violated. (eli)
 
+    MAPREDUCE-2451. Log the details from health check script at the
+    JobTracker. (Thomas Graves via cdouglas)
+
 Release 0.20.204.0 - unreleased
 
   BUG FIXES
